--- a/v1/purchases/index.html
+++ b/v1/purchases/index.html
@@ -238,7 +238,8 @@
         <span class="s2">"print_url"</span><span class="o">:</span> <span class="s2">"http://domain/coupons/a21c5452d8/print"</span>
       <span class="p">}</span>
     <span class="p">]</span>
-  <span class="p">}</span>
+  <span class="p">},</span>
+  <span class="s2">"credit_card_id"</span><span class="o">:</span> <span class="kc">null</span>
 <span class="p">}</span></code></pre>
 
 <h2 id="release-a-reserved-purchase">Release a reserved purchase</h2>
