--- a/v1/users/saved_deals/index.html
+++ b/v1/users/saved_deals/index.html
@@ -163,6 +163,12 @@
                 <li><a href="/v1/users/subscriptions/">Subscriptions</a></li>
               </ul>
             </li>
+            <li>
+              <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/">Targeted Emails</a></h3>
+              <ul>
+                <li><a href="/v1/targeted_emails/batches/">Batches</a></li>
+              </ul>
+            </li>
           </ul>
         </div> <!-- /sidebar-module -->
         <div class="sidebar-module">
