--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ you have any problems or requests please contact
 <a href="mailto:support@offerengine.com">support</a>.</p>
 
 <p>For the new API, start browsing the resources on the right »</p>
+
+<p>Please remember <b>all calls must be made via HTTPS</b>.  Never send your api_key over HTTP.</p>
       </div>
 
       <div id="js-sidebar" class="sidebar-shell">
@@ -86,6 +88,12 @@ you have any problems or requests please contact
                 <li><a href="/v1/users/saved_deals/">Saved Deals</a></li>
                 <li><a href="/v1/users/shipping_addresses/">Shipping Addresses</a></li>
                 <li><a href="/v1/users/subscriptions/">Subscriptions</a></li>
+              </ul>
+            </li>
+            <li>
+              <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/">Targeted Emails</a></h3>
+              <ul>
+                <li><a href="/v1/targeted_emails/batches/">Batches</a></li>
               </ul>
             </li>
           </ul>
