--- a/v1/targeted_emails/batches/index.html
+++ b/v1/targeted_emails/batches/index.html
@@ -275,6 +275,12 @@ Limited to 10 000 scheduled user ids per send_at day.</p>
                 <li><a href="/v1/targeted_emails/batches/">Batches</a></li>
               </ul>
             </li>
+            <li>
+              <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/">Stats</a></h3>
+              <ul>
+                <li><a href="/v1/stats/merchants/">Merchants</a></li>
+              </ul>
+            </li>
           </ul>
         </div> <!-- /sidebar-module -->
         <div class="sidebar-module">
