--- a/v1/users/index.html
+++ b/v1/users/index.html
@@ -341,6 +341,12 @@ was not included on the request then the reponse will be</li>
                 <li><a href="/v1/targeted_emails/batches/">Batches</a></li>
               </ul>
             </li>
+            <li>
+              <h3><a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a><a href="/">Stats</a></h3>
+              <ul>
+                <li><a href="/v1/stats/merchants/">Merchants</a></li>
+              </ul>
+            </li>
           </ul>
         </div> <!-- /sidebar-module -->
         <div class="sidebar-module">
