--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
 <p>Specifically, you will find information to:</p>
 
 <ul>
-<li><a href="/v1/authentication/">Authenticate your calls</a></li>
-  <li><a href="/v1/get_deals/">Get Deal inventory</a></li>
-  <li><a href="/v1/full_purchase/">Make Deal purchases</a></li>
+<li>Authenticate your calls - <a href="/v1/authentication/">Authentication</a>
+</li>
+  <li>Get deal inventory - <a href="/v1/get_deals/">Get Deals</a>
+</li>
+  <li>Make deal purchases - <a href="/v1/full_purchase/">Execute Purchases</a>
+</li>
 </ul><h2 id="overview">Overview</h2>
 
 <p>This is a RESTful API. Our API is designed to have predictable, resource-oriented URLs and to use HTTP response codes to indicate API errors. We use built-in HTTP features, like HTTP authentication and HTTP verbs, which can be understood by off-the-shelf HTTP clients, and we support cross-origin resource sharing to allow you to interact securely with our API from a client-side web application. JSON will be returned in all responses from the API, including errors.</p>
@@ -117,7 +120,6 @@
                 <li><a href="/v1/users/shipping_addresses/">User Shipping Addresses</a></li>
                 <li><a href="/v1/users/subscriptions/">User Subscriptions</a></li>
                 <li><a href="/v1/targeted_emails/batches/">Targeted Emails</a></li>
-                <li><a href="/v1/targeted_emails/batches/">Targeted Email Batches</a></li>
                 <li><a href="/v1/stats/merchants/">Stats</a></li>
               </ul>
             </li>
