--- a/v1/get_deals/index.html
+++ b/v1/get_deals/index.html
@@ -30,7 +30,7 @@
       <div class="content">
         <h1 id="get-deals">Get Deals</h1>
 
-<p>This api will return a set of applicable deal objects based upon the filtering parameters that are passed in the request. You can request a broad list of available deals or very specific highly targeted deals to provide to your users.</p>
+<p>This api will return a set of applicable deal resources based upon the filtering parameters that are passed in the request. You can request a broad list of available deals or very specific highly targeted deals to provide to your users.</p>
 
 <h2 id="request">Request</h2>
 
@@ -174,7 +174,7 @@
 
 <h2 id="response-attributes">Response Attributes</h2>
 
-<p>The response json file will contain a list of deal objects meeting the request filter parameters</p>
+<p>The response json file will contain a list of deal resources meeting the request filter parameters</p>
 
 <h3 id="status-attributes">status attributes</h3>
 
@@ -184,7 +184,7 @@
 <em>String</em>  State of the request (success or error)</dd>
 </dl><h3 id="deal-attributes">deal attributes</h3>
 
-<p>Will contain a list of deal objects with all associated deal attributes for each deal in result set</p>
+<p>Will contain a list of deal resources with all associated deal attributes for each deal in result set</p>
 
 <dl>
 <dt>id</dt>
@@ -535,7 +535,6 @@
                 <li><a href="/v1/users/shipping_addresses/">User Shipping Addresses</a></li>
                 <li><a href="/v1/users/subscriptions/">User Subscriptions</a></li>
                 <li><a href="/v1/targeted_emails/batches/">Targeted Emails</a></li>
-                <li><a href="/v1/targeted_emails/batches/">Targeted Email Batches</a></li>
                 <li><a href="/v1/stats/merchants/">Stats</a></li>
               </ul>
             </li>
