--- a/v1/advanced/index.html
+++ b/v1/advanced/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Language" content="en-us" />
   <meta http-equiv="imagetoolbar" content="false" />
   <meta name="MSSmartTagsPreventParsing" content="true" />
-  <title>Advanced Requests - OfferEngine API</title>
+  <title>Additional Requests - OfferEngine API</title>
   <link href="/css/reset.css" rel="stylesheet" type="text/css" />
   <link href="/css/960.css" rel="stylesheet" type="text/css" />
   <link href="/css/uv_active4d.css" rel="stylesheet" type="text/css" />
@@ -28,7 +28,7 @@
 
     <div id="wrapper">
       <div class="content">
-        <h1 id="advanced-requests">Advanced Requests</h1>
+        <h1 id="additional-requests">Additional Requests</h1>
 
 <p>The following requests provide additional functionality which are not necessary to provide Deem Offers to your customers.</p>
 
@@ -96,13 +96,7 @@
 <p>Marketing email operations</p>
 
 <ul>
-<li>
-<a href="/v1/targeted_emails/batches/">Targeted Emails</a>
-    <ul>
 <li><a href="/v1/targeted_emails/batches/">Targeted Emails</a></li>
-      <li><a href="/v1/targeted_emails/batches/">Targeted Email Batches</a></li>
-    </ul>
-</li>
 </ul><h2 id="stats">Stats</h2>
 
 <p>Stats information operations</p>
@@ -156,7 +150,6 @@
                 <li><a href="/v1/users/shipping_addresses/">User Shipping Addresses</a></li>
                 <li><a href="/v1/users/subscriptions/">User Subscriptions</a></li>
                 <li><a href="/v1/targeted_emails/batches/">Targeted Emails</a></li>
-                <li><a href="/v1/targeted_emails/batches/">Targeted Email Batches</a></li>
                 <li><a href="/v1/stats/merchants/">Stats</a></li>
               </ul>
             </li>
