--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Language" content="en-us" />
   <meta http-equiv="imagetoolbar" content="false" />
   <meta name="MSSmartTagsPreventParsing" content="true" />
-  <title>OfferEngine API - OfferEngine API</title>
+  <title>Overview - OfferEngine API</title>
   <link href="/css/reset.css" rel="stylesheet" type="text/css" />
   <link href="/css/960.css" rel="stylesheet" type="text/css" />
   <link href="/css/uv_active4d.css" rel="stylesheet" type="text/css" />
@@ -28,28 +28,17 @@
 
     <div id="wrapper">
       <div class="content">
-        <h1 id="offerengine-api-introduction">OfferEngine API Introduction</h1>
+        <h1 id="overview">Overview</h1>
 
-<p>Deem Offers provides APIs allowing you to integrate Offers content into your existing platform and services.</p>
+<p>This API provides the ability for you to include in-context Offers within your existing website, mobile app, emails, or any other internet enabled surfaces. The entire sales process, display through purchase, can be seamlessly integrated providing your customers an uninterrupted value added experience to purchase relevant offers when and where you see fit.</p>
 
-<p>Using two simple API calls you can provide in-context Offers within your existing website, mobile app, emails, or any other internet enabled surface. The entire sales process, display through purchase, can be seamlessly integrated providing your customers an uninterrupted user experience.</p>
+<p>On this website, we will provide all the information you need to start providing offers to your users using Deem Offers API.</p>
 
-<p>On this website, we would like to provide all the information you will need to start using Deem Offers APIs.</p>
+<h2 id="introduction">Introduction</h2>
 
-<p>Specifically, you will find information to:</p>
+<p>This is a <a href="http://en.wikipedia.org/wiki/Representational_State_Transfer">RESTful</a> API. Our API is designed to have predictable, resource-oriented URLs and to use HTTP response codes to indicate API errors. We use built-in <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec9.html">HTTP</a> features, like HTTP authentication and HTTP verbs, which can be understood by off-the-shelf HTTP clients, and we support cross-origin resource sharing to allow you to interact securely with our API from a client-side web application. <a href="http://en.wikipedia.org/wiki/JSON">JSON</a> will be returned in all responses from the API, including errors.</p>
 
-<ul>
-<li>Authenticate your calls - <a href="/v1/authentication/">Authentication</a>
-</li>
-  <li>Get deal inventory - <a href="/v1/get_deals/">Get Deals</a>
-</li>
-  <li>Make deal purchases - <a href="/v1/full_purchase/">Execute Purchases</a>
-</li>
-</ul><h2 id="overview">Overview</h2>
-
-<p>This is a RESTful API. Our API is designed to have predictable, resource-oriented URLs and to use HTTP response codes to indicate API errors. We use built-in HTTP features, like HTTP authentication and HTTP verbs, which can be understood by off-the-shelf HTTP clients, and we support cross-origin resource sharing to allow you to interact securely with our API from a client-side web application. JSON will be returned in all responses from the API, including errors.</p>
-
-<p>Accounts have test-mode API keys, as well as live-mode API keys. These keys can be active at the same time. Data created with test-mode credentials will never modify or alter your production data and will never actually charge credit cards.</p>
+<p>Accounts have test-mode API keys, as well as live-mode API keys. These keys can be active at the same time. Data created with test-mode credentials will never modify or alter your production data and will never actually charge purchase cards.</p>
 
 <p>If you have any problems or requests please contact <a href="mailto:support@offerengine.com">support</a>.</p>
 
@@ -57,33 +46,29 @@
 
 <p><b>https://api.offers.deem.com/</b></p>
 
-<h2 id="basic-actions">Basic Actions</h2>
+<h2 id="example-implementation">Example Implementation</h2>
 
-<p>The basic actions needed to provide offers to your users are: </p>
+<p>Using just two simple API calls you can provide offers to your users. Below is a brief description of how that would work with an existing mobile application:</p>
 
-<ul>
-<li>to get a list of available offers, which then are displayed by you on your surfaces</li>
-  <li>to make a purchase of an offer for your users. </li>
-</ul><p>The following two separate requests are required to perform these actions:</p>
+<p><img src="/images/mobile_use_example.png" alt="Mobile Example Image"></p>
 
-<ul>
-<li><a href="/v1/get_deals/">Get Deals</a></li>
-  <li><a href="/v1/full_purchase/">Execute Purchases</a></li>
-</ul><p>Additional requests providing advanced features can be found here:</p>
-
-<ul>
-<li><a href="/v1/advanced/">Additional Requests</a></li>
-</ul>
+<p>To get started implementing this on your own surface, go to our <a href="/v1/quick_start/">Quick Start Guide</a></p>
       </div>
 
       <div id="js-sidebar" class="sidebar-shell">
         <div class="js-toggle-list sidebar-module expandable">
           <ul>
             <li>
-              <h3><a href="/">Introduction</a></h3>
+              <h3><a href="/">Overview</a></h3>
+            </li>
+            <li>
+              <h3><a href="/v1/quick_start/">Quick Start</a></h3>
             </li>
             <li>
               <h3><a href="/v1/authentication/">Authentication</a></h3>
+            </li>
+            <li>
+              <h3><a href="/v1/errors/">Errors</a></h3>
             </li>
             <li>
               <h3><a href="/v1/get_deals/">Get Deals</a></h3>
@@ -91,10 +76,6 @@
             <li>
               <h3><a href="/v1/full_purchase/">Execute Purchases</a></h3>
             </li>
-            <li>
-              <h3><a href="/v1/errors/">Errors</a></h3>
-            </li>
-
             <li>
               <h3>
                 <a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a>
