--- a/v1/errors/index.html
+++ b/v1/errors/index.html
@@ -30,7 +30,7 @@
       <div class="content">
         <h1 id="errors">Errors</h1>
 
-<p>Conventional HTTP response codes to indicate success or failure of an API request are used. In general, codes in the 2xx range indicate success, codes in the 4xx range indicate an error that resulted from the provided information (e.g. a required parameter was missing, a charge failed, etc.), and codes in the 5xx range indicate an error with OfferEngine’s servers.</p>
+<p>Conventional <a href="http://www.w3.org/Protocols/rfc2616/rfc2616-sec10.html">HTTP response codes</a> to indicate success or failure of an API request are used. In general, codes in the 2xx range indicate success, codes in the 4xx range indicate an error that resulted from the provided information (e.g. a required parameter was missing, a charge failed, etc.), and codes in the 5xx range indicate an error with OfferEngine’s servers.</p>
 
 <p>Not all errors map cleanly onto HTTP response codes. All specific errors are mentioned on a per request basis in each request explanation.</p>
 
@@ -116,10 +116,16 @@
         <div class="js-toggle-list sidebar-module expandable">
           <ul>
             <li>
-              <h3><a href="/">Introduction</a></h3>
+              <h3><a href="/">Overview</a></h3>
+            </li>
+            <li>
+              <h3><a href="/v1/quick_start/">Quick Start</a></h3>
             </li>
             <li>
               <h3><a href="/v1/authentication/">Authentication</a></h3>
+            </li>
+            <li>
+              <h3><a href="/v1/errors/">Errors</a></h3>
             </li>
             <li>
               <h3><a href="/v1/get_deals/">Get Deals</a></h3>
@@ -127,10 +133,6 @@
             <li>
               <h3><a href="/v1/full_purchase/">Execute Purchases</a></h3>
             </li>
-            <li>
-              <h3><a href="/v1/errors/">Errors</a></h3>
-            </li>
-
             <li>
               <h3>
                 <a href="javascript:" class="js-expand-btn collapsed">&nbsp;</a>
