--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <h2 id="example-implementation">Example Implementation</h2>
 
-<p>Using just two simple API calls you can provide offers to your users. Below is a brief description of how that would work with an existing mobile application:</p>
+<p>Using just two simple API calls (get deals and execute purchase) you can provide offers to your users. Below is a brief description of how that would work with an existing mobile application:</p>
 
 <p><img src="/images/mobile_use_example.png" alt="Mobile Example Image"></p>
 
